Start development of 'view add' command. Change executables to origin

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,43 @@
+# Signature off
+ServerSignature Off
+
+# XSS protection
+Header set  X-XSS-Protection  "1; mode=block"
+
+# No directory listing
+Options -Indexes
+
+# Gzip please
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/css
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/x-javascript
+
+# Enable cache
+# Files and videos, one year
+<FilesMatch "\.(flv|ico|pdf|avi|mov|ppt|doc|mp3|wmv|wav)$">
+Header set Cache-Control "max-age=31536000, public"
+</FilesMatch>
+
+# Images, one year
+<FilesMatch "\.(jpg|jpeg|png|gif|swf)$">
+Header set Cache-Control "max-age=31536000, public"
+</FilesMatch>
+
+# Javascript, css, three hours
+<FilesMatch "\.(txt|xml|js|css)$">
+Header set Cache-Control "max-age=10800"
+</FilesMatch>
+
+# Dinamyc html, no cache.
+<FilesMatch "\.(html|htm|php|cgi|pl)$">
+Header set Cache-Control "max-age=0, private, no-store, no-cache, must-revalidate"
+</FilesMatch>
 <IfModule mod_rewrite.c>
 RewriteEngine On
 
