--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
     },
     "require": {
         "php": "^5.3.3 || ^7.0",
-        "pear/mail": "*",
-        "pear/net_smtp": "*",
-        "pear/mail_mime": "*",
+        "phpmailer/phpmailer": "^6.0.1",
+        "mustangostang/spyc": "^0.6.2",
         "ext-mbstring": "*"
     },
     "autoload": {
