--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": "^5.3.3 || ^7.0",
         "phpmailer/phpmailer": "^6.0.1",
-        "ext-mbstring": "*"
+        "symfony/polyfill-mbstring": "^1.2"
     },
     "autoload": {
       "psr-4": {
